# game_of_life

./: .gitignore  CMakeLists.txt  Display.cpp  Display.hpp  Game.cpp  Game.hpp  README.md  main.cpp
.github/workflows/: cmake.yml
